2005-10-15 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/_strcmp.c: Fixed bug 1326457

2005-10-11 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libio/i2c.ignore: added 1320, fixes broken builds
	* device/lib/pic16/libdev/pic18f1320.c: added 1320's device library

2005-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y (AT): fixed bug with sfr32 addresses when built with GCC
	* support/regression/tests/sfr16.c: added test for the sfr32 bug

2005-10-04 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18fregs.h, src/pic16/devices.inc,
	  device/lib/pic16/pics.all: added pic18f1320
	* src/pic16/pcode.c (mnem2key): fixed prototype's argument mismatch

2005-09-30 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c (Pics16[]): moved device descriptions to devices.inc
	* src/pic16/devices.inc: NEW, provides device descriptions
	* src/pic16/gen.c (genInline): fixed handling of ';'-comments

2005-09-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (operandOperation): added GETABIT, GETBYTE, GETWORD and
	  GETHBIT

2005-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: updated Highest Order Bit documentation,
	  documented Any Order Bit, Higher Order Byte and Higher Order Word
	* src/SDCC.y: added tokens GETABIT, GETBYTE, GETWORD
	* src/SDCCast.c (optimizeGetHbit): updated to also accept bool=expr&(1<<n),
	  (optimizeGetAbit): new, to get any bit, not only the high bit,
	  (optimizeGetByte): new, to get a byte from a (long) int: expr>>(8*n),
	  (optimizeGetWord): new, to get a word from a long int: expr>>(8*n),
	  (isConformingBody): also check GETABIT, GETBYTE, GETWORD,
	  (decorateType): '&': also try GETABIT, GETBYTE, GETWORD optimization,
	    RIGHT_OP: also try GETBYTE, GETWORD optimization,
	    GETABIT, GETBYTE, GETWORD: decorate them,
	  (isShiftRightLitVal, isBitAndPowOf2): new helper functions,
	  (ast_print): added GETABIT, GETBYTE, GETWORD